# facial-recogniton

./: .gitignore  README.md  default.nix  main.py  pyproject.toml  requirements.txt  result  runserver.py  shell.nix
facial-recognition/: main.py
facial-recognition/website/: __init__.py
facial-recognition/website/controllers/: auth_routes.py  routes.py
facial-recognition/website/views/: attendance.jinja  base.jinja  login.jinja  navbar.jinja
facial_recognition/: main.py
facial_recognition/website/: __init__.py
facial_recognition/website/controllers/: CAluno.py  auth_routes.py  routes.py
facial_recognition/website/views/: base.html  base.jinja  index.html  index.jinja  login.html  navbar.html  navbar.jinja  register.jinja
src/Recognition/: recognition.py  recognizer.py  streaming.py
src/Website/: main.py
src/Website/website/: __init__.py
src/Website/website/controllers/: CPicture.py  CStudent.py  acess_level.py  auth_routes.py  routes.py
src/Website/website/dao/: DAttendance.py  DPicture.py  DStudent.py
src/Website/website/models/: MAluno.py  MAttendance.py  MPicture.py  MStudent.py
src/Website/website/static/: landing-page.css
src/Website/website/views/: attendance.html  base.html  index.html  navbar.html  register.html  students.html  video-feed.html
website/: __init__.py
website/controllers/: CAluno.py  auth_routes.py  routes.py
website/dao/: DAluno.py  database.py
website/models/: MAluno.py
website/views/: base.html  index.html  navbar.html  register.html
