[tool.poetry]
name = "facial-recognition"
version = "0.1.0"
description = "Automatic student attendance register with the help of facial recognition"
authors = ["diegofariasm <diegofarias016@gmail.com>"]
readme = "README.md"
packages = [{include = "facial-recognition"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
flask-wtf = "^1.0.1"
flask-login = "^0.6.2"
flask-sqlalchemy = "^3.0.2"
flask-debugtoolbar = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
