[tool.poetry]
name = "automatic-attendance-system"
version = "0.1.0"
description = "Automatic student attendance register with the help of facial recognition"
authors = ["diegofariasm <diegofarias016@gmail.com>"]
readme = "README.md"
packages = [
    {include = "Website", from='src'},
    {include = "Recognition", from='src'}
    ]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
flask-debugtoolbar = "^0.13.1"
opencv-python = "^4.6.0.66"

[tool.poetry.scripts]
start = 'runserver:start'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
