[tool.poetry]
name = "automatic-attendance-system"
version = "0.1.0"
description = "Automatic student attendance register with the help of facial recognition"
authors = ["diegofariasm <diegofarias016@gmail.com>"]
readme = "README.md"
packages = [
    {include = "Website", from='src'},
    {include = "Recognition", from='src'}
    ]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
flask-wtf = "^1.0.1"
flask-login = "^0.6.2"
flask-sqlalchemy = "^3.0.2"
flask-debugtoolbar = "^0.13.1"
cleo = "^2.0.1"
opencv-python = "^4.6.0.66"
dlib = "^19.24.0"
cmake = "^3.25.0"
face-recognition = "^1.3.0"
poetry2conda = "^0.3.0"

[tool.poetry2conda]
name = 'facialrecognition-env'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
